Add link to SWEST_APP.zip

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,7 @@
   <body>
     <h1>mruby</h1>
     <%= @message %>
+    <br />
+    <a href="/SWEST_APP.zip" target="_blank">アプリケーションダウンロード(SWEST_APP.zip) 3.0MB</a>
   </body>
 </html>
