USE S3 for download

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,6 @@
     <h1>mruby</h1>
     <%= @message %>
     <br />
-    <a href="/SWEST_APP.zip" target="_blank">アプリケーションダウンロード(SWEST_APP.zip) 3.0MB</a>
+    <a href="https://s3-ap-northeast-1.amazonaws.com/kyutech-tanaka-lab/SWEST_APP.zip" target="_blank">アプリケーションダウンロード(SWEST_APP.zip) 3.0MB</a>
   </body>
 </html>
