--- a/views/index.erb
+++ b/views/index.erb
@@ -4,5 +4,9 @@
     <%= @message %>
     <br />
     <a href="https://s3-ap-northeast-1.amazonaws.com/kyutech-tanaka-lab/SWEST_APP.zip" target="_blank">アプリケーションダウンロード(SWEST_APP.zip) 3.0MB</a>
+    <br />
+    <a href="https://s3-ap-northeast-1.amazonaws.com/kyutech-tanaka-lab/%E6%BC%94%E7%BF%92.pdf" target="_blank">資料 0.5MB</a>
+    <br />
+    <a href="https://s3-ap-northeast-1.amazonaws.com/kyutech-tanaka-lab/%E8%B3%87%E6%96%99.pdf" target="_blank">演習資料 0.5MB</a>
   </body>
 </html>
